--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>it.banzaicommerce</groupId>
-	<artifactId>upload-file</artifactId>
+	<artifactId>resteasy-upload</artifactId>
 	<packaging>war</packaging>
-	<name>upload-file</name>
+	<name>resteasy-upload</name>
 	<version>0.1</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -122,7 +122,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>upload-file</finalName>
+		<finalName>resteasy-upload</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 	</build>
 
